--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>QR Code</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <h1>سازنده کد QR</h1>
+            <p>متن خود را وارد نمایید</p>
+        </header>
+        <div class="form">
+            <input type="text">
+            <button>کد را بساز</button>
+        </div>
+        <div class="qr-code">
+            <img src="1.png" width="150" height="150">
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
