--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>سازنده کد QR</h1>
+            <h1>QR سازنده کد</h1>
             <p>متن خود را وارد نمایید</p>
         </header>
         <div class="form">
