--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button>کد را بساز</button>
         </div>
         <div class="qr-code">
-            <img src="1.png" width="150" height="150">
+            <img  width="150" height="150">
         </div>
     </div>
 
